# sandbox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.cpp
src/app/: main.cpp
src/app/scenes/: AffineScene.cpp  AffineScene.h  CircleScene.cpp  CircleScene.h  DotProductScene.cpp  DotProductScene.h  DotProjScene.cpp  DotProjScene.h  Example2DScene.cpp  Example2DScene.h  Example3DScene.cpp  Example3DScene.h  HeartScene.cpp  HeartScene.h  MatScene.cpp  MatScene.h  SceneRegistry.h
src/engine/core/: Color.h  Color4f.h  IRenderer.h  IWindow.h  InputState.h  Logger.cpp  Logger.h
src/engine/math/sgm/: CMakeLists.txt  README.md
src/engine/math/sgm/public/: mat2.h  mat3.h  mat4.h  matrix.h  matrix_func.h  matrix_transform.h  sgm.h  trigonometry.h  vec2.h  vec3.h  vec4.h  vector.h
src/engine/platform/glfw/: GlfwWindow.cpp  GlfwWindow.h
src/engine/render/: PixelRenderer.cpp  PixelRenderer.h
src/engine/render/d3d11/: D3d11Presenter.cpp  D3d11Presenter.h
src/engine/render/opengl/: GlPresenter.cpp  GlPresenter.h
src/engine/scene/: FrameContext.h  IScene.h  SceneManager.cpp  SceneManager.h
src/engine/ui/: EditorUi.cpp  EditorUi.h  ImGuiLayer.cpp  ImGuiLayer.h
tools/: emscripten_shell.html  gen_scene_registry.py
